--- a/02 - JS + CSS Clock/index.html
+++ b/02 - JS + CSS Clock/index.html
@@ -64,33 +64,34 @@
       transform-origin: 100%;
       transform: rotate(90deg);
       transition: all 0.05s;
-      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1); 
     }
-</style>
 
-<script>
-  const secondHand = document.querySelector('.second-hand');
-  const minsHand = document.querySelector('.min-hand');
-  const hourHand = document.querySelector('.hour-hand');
+  </style>
 
-  function setDate() {
-    const now = new Date();
+  <script>
+  const secHand = document.querySelector('.second-hand')
+  const minHand = document.querySelector('.min-hand')
+  const hourHand = document.querySelector('.hour-hand')
 
-    const seconds = now.getSeconds();
-    const secondsDegrees = ((seconds / 60) * 360) + 90;
-    secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+  function setDate(){
+    const now = new Date()
 
-    const mins = now.getMinutes();
-    const minsDegrees = ((mins / 60) * 360) + 90;
-    minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+    const sec = now.getSeconds()
+    const secDeg = ((sec / 60) * 360) + 90
+    secHand.style.transform = `rotate(${secDeg}deg)`
 
-    const hour = now.getMinutes();
-    const hourDegrees = ((mins / 12) * 360) + 90;
-    hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+    const min = now.getMinutes()
+    const minDeg = ((min / 60) * 360) + 90
+    minHand.style.transform = `rotate(${minDeg}deg)`
+
+    const hour = now.getHours()
+    const hourDeg = ((hour / 12) * 360) + 90
+    hourHand.style.transform = `rotate(${hourDeg}deg)`
   }
 
-  setInterval(setDate, 1000);
+  setInterval(setDate, 1000)
 
-</script>
+  </script>
 </body>
 </html>
