--- a/04 - Array Cardio Day 1/index.html
+++ b/04 - Array Cardio Day 1/index.html
@@ -33,28 +33,45 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const oldInventors = inventors.filter(inventor => /^15[0-9]{2}$/.test(inventor.year))
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    const sorted = inventors.sort((a, b) => a.year > b.year ? 1 : -1)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((acc, curr) => acc += curr.passed - curr.year, 0)
 
     // 5. Sort the inventors by years lived
+    const yrsLived = inventors.sort((a, b) => (a.passed - a.year) > (b.passed - b.year) ? 1 : -1)    
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
-
+    const links = [...document.querySelectorAll('.mw-category a')] || []
+    const titles = links.map(l => l.title)
+    const de = titles.filter(t => t.includes('de'))
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((a, b) => {
+      const aLast = a.split(",")[0]
+      const bLast =  b.split(", ")[0]
+      return aLast > bLast ? 1 : -1
+    })
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const inst = data.reduce(function(acc, curr){
+      if (!acc[curr]) acc[curr] = 0
+      acc[curr]++
+      return acc
+    }, {})
 
   </script>
 </body>
