--- a/05 - Flex Panel Gallery/index.html
+++ b/05 - Flex Panel Gallery/index.html
@@ -33,6 +33,7 @@
       color:white;
       text-align: center;
       align-items:center;
+      flex: 1;
       /* Safari transitionend event.propertyName === flex */
       /* Chrome + FF transitionend event.propertyName === flex-grow */
       transition:
@@ -42,7 +43,7 @@
       font-size: 20px;
       background-size:cover;
       background-position:center;
-      flex: 1;
+      align-content: center;
       justify-content: center;
       display: flex;
       flex-direction: column;
@@ -55,21 +56,31 @@
     .panel4 { background-image:url(https://source.unsplash.com/ITjiVXcwVng/1500x1500); }
     .panel5 { background-image:url(https://source.unsplash.com/3MNzGlQM7qs/1500x1500); }
 
-    /* Flex Items */
     .panel > * {
       margin:0;
       width: 100%;
       transition:transform 0.5s;
       flex: 1 0 auto;
-      display:flex;
-      justify-content: center;
+      display: flex;
       align-items: center;
+      justify-content: center;
     }
 
-    .panel > *:first-child { transform: translateY(-100%); }
-    .panel.open-active > *:first-child { transform: translateY(0); }
-    .panel > *:last-child { transform: translateY(100%); }
-    .panel.open-active > *:last-child { transform: translateY(0); }
+    .panel > *:first-child {
+      transform: translateY(-100%);
+    }
+
+    .panel.open-active > *:first-child {
+      transform: translateY(0);
+    }
+
+    .panel > *:last-child {
+      transform: translateY(100%);
+    }
+
+    .panel.open-active > *:last-child {
+      transform: translateY(0);
+    }
 
     .panel p {
       text-transform: uppercase;
@@ -82,8 +93,8 @@
     }
 
     .panel.open {
-      flex: 5;
       font-size:40px;
+      flex: 5;
     }
 
     .cta {
@@ -123,22 +134,21 @@
   </div>
 
   <script>
-    const panels = document.querySelectorAll('.panel');
+    const panels = document.querySelectorAll('.panel')
 
-    function toggleOpen() {
-      console.log('Hello');
-      this.classList.toggle('open');
+    function toggleOpen(e){
+      this.classList.toggle('open')
     }
 
-    function toggleActive(e) {
-      console.log(e.propertyName);
+    function toggleActive(e){
       if (e.propertyName.includes('flex')) {
-        this.classList.toggle('open-active');
+        this.classList.toggle('open-active')
       }
     }
 
-    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
-    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen))
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive))
+
   </script>
 
 </body>
