--- a/07 - Array Cardio Day 2/index.html
+++ b/07 - Array Cardio Day 2/index.html
@@ -26,15 +26,28 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19?
+      const nineteenA = people.some(person => {
+        const now = new Date().getFullYear()
+        return now - person.year >= 19
+      })
+
     // Array.prototype.every() // is everyone 19?
+      const nineteenB = people.every(person => {
+        const now = new Date().getFullYear()
+        return now - person.year >= 19
+      })
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+      const found = comments.find(comment => comment.id === 823423)
+
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+      const index = comments.findIndex(comment => comment.id === 823423)
+      const newComments = [...comments.slice(0, index), ...comments.slice(index + 1)]  
 
   </script>
 </body>
