--- a/13 - Slide in on Scroll/index.html
+++ b/13 - Slide in on Scroll/index.html
@@ -58,25 +58,26 @@
       };
     }
 
-    const sliderImages = document.querySelectorAll('.slide-in');
+    const sliderImages = document.querySelectorAll('.slide-in')
 
-    function checkSlide(e) {
-      sliderImages.forEach(sliderImage => {
-        // half way through the image
-        const slideInAt = (window.scrollY + window.innerHeight) - sliderImage.height / 2;
-        // bottom of the image
-        const imageBottom = sliderImage.offsetTop + sliderImage.height;
-        const isHalfShown = slideInAt > sliderImage.offsetTop;
-        const isNotScrolledPast = window.scrollY < imageBottom;
+    function checkSlide(e){
+      sliderImages.forEach(img => {
+        //halfway thru img
+        const slideInAt = (window.scrollY + window.innerHeight) - (img.height/2)
+        //bottom of img
+        const imgBottom = img.offsetTop + img.height
+        const isHalfShown = slideInAt > img.offsetTop
+        const isNotScrolledPast = window.scrollY < imgBottom
+
         if (isHalfShown && isNotScrolledPast) {
-          sliderImage.classList.add('active');
+          img.classList.add('active')
         } else {
-          sliderImage.classList.remove('active');
+          img.classList.remove('active')
         }
-      });
+      })
     }
 
-    window.addEventListener('scroll', debounce(checkSlide));
+    window.addEventListener('scroll', debounce(checkSlide))
 
   </script>
 
